fix pagination height missalignment ADF-1498 (#2284)

--- a/ng2-components/ng2-alfresco-core/src/components/pagination/pagination.component.scss
+++ b/ng2-components/ng2-alfresco-core/src/components/pagination/pagination.component.scss
@@ -10,7 +10,7 @@
         display: flex;
         border-top: $adf-pagination--border;
         height: $adf-pagination--height;
-        line-height: $adf-pagination--height;
+        line-height: 20px;
         color: mat-color($foreground, text);
 
         &__block {
